# testAutoMoc

./: .gitignore  CMakeLists.txt
src/: main.cpp  myClass.cpp  myClass.h  testqt.cpp  testqt.h  testqt.qrc  testqt.ui  ui_testqt.h
src/myDll/: myDll.cmake  myDllClass.cpp  myDllClass.h  myDllMacros.h
src/myDll2/: myDll2.cmake  myDll2Class.cpp  myDll2Class.h  myDll2Macros.h
